k8s/06-django-service.yaml
# k8s/06-django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: hamravesh-project
  labels:
    app: django-app
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
