k8s/08-ingress.yaml
# k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: hamravesh-project # Added namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: django.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-service
                port:
                  number: 80
